# packages/api-tenant/src/domains/tenant/router.ts
@@ -3,10 +3,12 @@
  */
 import { healthImpl } from "./subdomains/public/health.impl.ts";
 import { pushSubdomainRouter } from "./subdomains/push/router.ts";
+import { internalSubdomainRouter } from "./subdomains/internal/router.ts";
 
 export const tenantDomainRouter = {
   health: healthImpl,
   push: pushSubdomainRouter,
+  internal: internalSubdomainRouter,
 };
 
 export type TenantDomainRouter = typeof tenantDomainRouter;
